--- a/recipes/aglio-e-olio.html
+++ b/recipes/aglio-e-olio.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Aglio E Olio</h1>
-    <img src="../images/aglioeolio.jpg" alt="Aglio E Olio" width="500">
+    <img src="../images/aglio-e-olio.jpg" alt="Aglio E Olio" width="480">
 
     <h2>Description</h2>
     <p>No two aglio e olio recipes are alike, but this one is pretty true to the classic method. The key is slowly toasting the garlic slices to a perfect golden brown in the olive oil. If it's too light, you don't get the full flavor and if it's too dark it gets bitter. My advice? Do it perfectly.</p>
