--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/aglioeolio.html">Aglio E Olio</a>
+        <ul>
+            <li><a href="./recipes/aglio-e-olio.html">Aglio E Olio</a></li>
+            <li><a href="./recipes/spaghetti-carbonara.html">Spaghetti Carbonara</a></li>
+        </ul> 
     </body>
 </html>
