--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="./recipes/aglio-e-olio.html">Aglio E Olio</a></li>
             <li><a href="./recipes/spaghetti-carbonara.html">Spaghetti Carbonara</a></li>
+            <li><a href="./recipes/indian-chicken-curry.html">Indian Chicken Curry</a></li>
         </ul> 
     </body>
 </html>
