--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
         <title>Odin Recipes</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/aglio-e-olio.html">Aglio E Olio</a></li>
-            <li><a href="./recipes/spaghetti-carbonara.html">Spaghetti Carbonara</a></li>
-            <li><a href="./recipes/indian-chicken-curry.html">Indian Chicken Curry</a></li>
+        <h1 id="title">Odin Recipes</h1>
+        <ul class="list">
+            <li id="first"><a href="./recipes/aglio-e-olio.html">Aglio E Olio</a></li>
+            <li id="second"><a href="./recipes/spaghetti-carbonara.html">Spaghetti Carbonara</a></li>
+            <li id="third"><a href="./recipes/indian-chicken-curry.html">Indian Chicken Curry</a></li>
         </ul> 
     </body>
 </html>
