--- a/recipes/indian-chicken-curry.html
+++ b/recipes/indian-chicken-curry.html
@@ -6,6 +6,8 @@
     <title>Indian Chicken Curry | Odin Recipes</title>
 </head>
 <body>
+    <a href="../index.html">Back to Homepage</a>
+    
     <h1>Indian Chicken Curry</h1>
     <img src="../images/indian-chicken-curry.jpg" alt="Indian Chicken Curry" width="480">
 
