Add red-pink theme to style.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <h1 id="title">Odin Recipes</h1>
+        <h1 class="main-title">Odin Recipes</h1>
         <ul class="list">
             <li id="first"><a href="./recipes/aglio-e-olio.html">Aglio E Olio</a></li>
             <li id="second"><a href="./recipes/spaghetti-carbonara.html">Spaghetti Carbonara</a></li>
