--- a/recipes/aglio-e-olio.html
+++ b/recipes/aglio-e-olio.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aglio E Olio | Odin Recipes</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <a href="../index.html">Back to Homepage</a>
-    
-    <h1>Aglio E Olio</h1>
-    <img src="../images/aglio-e-olio.jpg" alt="Aglio E Olio" width="480">
+    <a id="link-homepage" href="../index.html">Back to Homepage</a>
 
-    <h2>Description</h2>
+    <h1 class="main-title">Aglio E Olio</h1>
+    <div class="image"><img src="../images/aglio-e-olio.jpg" alt="Aglio E Olio" width="480"></div>
+
+    <h2 class="title">Description</h2>
     <p>No two aglio e olio recipes are alike, but this one is pretty true to the classic method. The key is slowly toasting the garlic slices to a perfect golden brown in the olive oil. If it's too light, you don't get the full flavor and if it's too dark it gets bitter. My advice? Do it perfectly.</p>
 
-    <h2>Ingredients</h2>
+    <h2 class="title">Ingredients</h2>
     <ul>
         <li>1 pound uncooked spaghetti</li>
         <li>½ cup olive oil</li>
@@ -25,7 +26,7 @@
         <li>1 cup finely grated Parmigiano-Reggiano cheese</li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2 class="title">Steps</h2>
     <ol>
         <li>Gather all ingredients.</li>
         <li>Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until cooked through but firm to the bite, about 10 to 12 minutes. Drain and transfer to a pasta bowl.</li>
