--- a/recipes/indian-chicken-curry.html
+++ b/recipes/indian-chicken-curry.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indian Chicken Curry | Odin Recipes</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <a href="../index.html">Back to Homepage</a>
-    
-    <h1>Indian Chicken Curry</h1>
-    <img src="../images/indian-chicken-curry.jpg" alt="Indian Chicken Curry" width="480">
+    <a id="link-homepage" href="../index.html">Back to Homepage</a>
 
-    <h2>Description</h2>
+    <h1 class="main-title">Indian Chicken Curry</h1>
+    <div class="image"><img src="../images/indian-chicken-curry.jpg" alt="Indian Chicken Curry" width="480"></div>
+
+    <h2 class="title">Description</h2>
     <p>This Indian-inspired creamy chicken curry recipe is similar to a curry I had in India. The aromatic spices and flavors are a delight to the senses! Delicious with fresh naan and basmati rice.</p>
 
-    <h2>Ingredients</h2>
+    <h2 class="title">Ingredients</h2>
     <ul>
         <li>3 tablespoons olive oil</li>
         <li>1 small onion, chopped</li>
@@ -34,7 +35,7 @@
         <li>½ teaspoon cayenne pepper</li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2 class="title">Steps</h2>
     <ol>
         <li>Heat olive oil in a skillet over medium heat. Sauté onion until lightly browned.</li>
         <li>Stir in garlic, curry powder, cinnamon, paprika, bay leaf, ginger, sugar, and salt. Continue stirring for 2 minutes.</li>
