--- a/recipes/spaghetti-carbonara.html
+++ b/recipes/spaghetti-carbonara.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spaghetti Carbonara | Odin Recipes</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <a href="../index.html">Back to Homepage</a>
-    
-    <h1>Spaghetti Carbonara</h1>
-    <img src="../images/spaghetti-carbonara.jpg" alt="Spaghetti Carbonara" width="480">
+    <a id="link-homepage" href="../index.html">Back to Homepage</a>
 
-    <h2>Description</h2>
+    <h1 class="main-title">Spaghetti Carbonara</h1>
+    <div class="image"><img src="../images/spaghetti-carbonara.jpg" alt="Spaghetti Carbonara" width="480"></div>
+
+    <h2 class="title">Description</h2>
     <p>This bacon carbonara is a super rich, classic "bacon and egg" spaghetti dish that's great to serve for company. This recipe also makes an unusual brunch offering.</p>
 
-    <h2>Ingredients</h2>
+    <h2 class="title">Ingredients</h2>
     <ul>
         <li>1 pound spaghetti</li>
         <li>2 tablespoons olive oil, divided, or as needed</li>
@@ -29,7 +30,7 @@
         <li>2 tablespoons grated Parmesan cheese</li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2 class="title">Steps</h2>
     <ol>
         <li>Bring a large pot of lightly salted water to a boil. Cook spaghetti in boiling water, stirring occasionally, until tender yet firm to the bite, about 12 minutes. Drain, toss spaghetti with 1 tablespoon olive oil, and set aside.</li>
         <li>Place diced bacon in a large skillet over medium heat; cook and stir until evenly browned, about 10 minutes. Drain bacon on paper towels, reserving 2 tablespoons bacon fat in the skillet.</li>
