Change layout of contents

--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
     </head>
 
     <body>
-        <h1 class="main-title">Odin Recipes</h1>
-        <ul class="list">
-            <li id="first"><a href="./recipes/aglio-e-olio.html">Aglio E Olio</a></li>
-            <li id="second"><a href="./recipes/spaghetti-carbonara.html">Spaghetti Carbonara</a></li>
-            <li id="third"><a href="./recipes/indian-chicken-curry.html">Indian Chicken Curry</a></li>
-        </ul> 
+        <div class="main-title main-title-bg" style="border-bottom:5px double black">
+            <h1 class="main-title-bg">Odin Recipes</h1>
+        </div>
+        
+        <div>
+            <ul id="recipes-list">
+                <div class="recipe-link">
+                    <li><a href="./recipes/aglio-e-olio.html">Aglio E Olio</a></li>
+                </div>
+                <div class="recipe-link">
+                    <li><a href="./recipes/spaghetti-carbonara.html">Spaghetti Carbonara</a></li>
+                </div>
+                <div class="recipe-link">
+                    <li><a href="./recipes/indian-chicken-curry.html">Indian Chicken Curry</a></li>
+                </div>
+            </ul>
+        </div>
+         
     </body>
 </html>
