--- a/recipes/aglio-e-olio.html
+++ b/recipes/aglio-e-olio.html
@@ -7,34 +7,52 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <a id="link-homepage" href="../index.html">Back to Homepage</a>
+    <div class="main-title main-title-bg" style="border-bottom:5px double black">
+        <h1 class="main-title-bg">Odin Recipes</h1>
+    </div>
+    <div id="link-homepage">
+        <a href="../index.html">Back to Homepage</a>
+    </div>
 
-    <h1 class="main-title">Aglio E Olio</h1>
+    <h2 class="recipe-title">Aglio E Olio</h2>
     <div class="image"><img src="../images/aglio-e-olio.jpg" alt="Aglio E Olio" width="480"></div>
 
-    <h2 class="title">Description</h2>
-    <p>No two aglio e olio recipes are alike, but this one is pretty true to the classic method. The key is slowly toasting the garlic slices to a perfect golden brown in the olive oil. If it's too light, you don't get the full flavor and if it's too dark it gets bitter. My advice? Do it perfectly.</p>
+    <div class="sub-title">
+        <h2>Description</h2>
+    </div>
+    <div class="description-content">
+        <p>No two aglio e olio recipes are alike, but this one is pretty true to the classic method. The key is slowly toasting the garlic slices to a perfect golden brown in the olive oil. If it's too light, you don't get the full flavor and if it's too dark it gets bitter. My advice? Do it perfectly.</p>
+    </div>
+    
+    <div class="sub-title">
+        <h2>Ingredients</h2>
+    </div>
+    <div class="ingredients-content">
+        <ul>
+            <li>1 pound uncooked spaghetti</li>
+            <li>½ cup olive oil</li>
+            <li>6 cloves garlic, thinly sliced</li>
+            <li>¼ teaspoon red pepper flakes, or to taste</li>
+            <li>salt and freshly ground black pepper to taste</li>
+            <li>¼ cup chopped fresh Italian parsley</li>
+            <li>1 cup finely grated Parmigiano-Reggiano cheese</li>
+        </ul>
+    </div>
 
-    <h2 class="title">Ingredients</h2>
-    <ul>
-        <li>1 pound uncooked spaghetti</li>
-        <li>½ cup olive oil</li>
-        <li>6 cloves garlic, thinly sliced</li>
-        <li>¼ teaspoon red pepper flakes, or to taste</li>
-        <li>salt and freshly ground black pepper to taste</li>
-        <li>¼ cup chopped fresh Italian parsley</li>
-        <li>1 cup finely grated Parmigiano-Reggiano cheese</li>
-    </ul>
-
-    <h2 class="title">Steps</h2>
-    <ol>
-        <li>Gather all ingredients.</li>
-        <li>Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until cooked through but firm to the bite, about 10 to 12 minutes. Drain and transfer to a pasta bowl.</li>
-        <li>While the pasta is cooking, combine olive oil and garlic in a cold skillet.</li>
-        <li>Cook over medium heat to slowly toast garlic, about 10 minutes. Reduce heat to medium-low when olive oil begins to bubble. Cook and stir until garlic is golden brown, about another 5 minutes. Remove from heat.</li>
-        <li>Stir red pepper flakes, salt, and black pepper into pasta.</li>
-        <li>Pour in hot olive oil and garlic, and sprinkle on Italian parsley and half of the Parmigiano-Reggiano cheese; toss until combined.</li>
-        <li>Serve pasta topped with the remaining Parmigiano-Reggiano cheese.</li>
-    </ol>
+    <div class="sub-title">
+        <h2>Steps</h2>
+    </div>
+    <div class="steps-content">
+        <ol>
+            <li>Gather all ingredients.</li>
+            <li>Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until cooked through but firm to the bite, about 10 to 12 minutes. Drain and transfer to a pasta bowl.</li>
+            <li>While the pasta is cooking, combine olive oil and garlic in a cold skillet.</li>
+            <li>Cook over medium heat to slowly toast garlic, about 10 minutes. Reduce heat to medium-low when olive oil begins to bubble. Cook and stir until garlic is golden brown, about another 5 minutes. Remove from heat.</li>
+            <li>Stir red pepper flakes, salt, and black pepper into pasta.</li>
+            <li>Pour in hot olive oil and garlic, and sprinkle on Italian parsley and half of the Parmigiano-Reggiano cheese; toss until combined.</li>
+            <li>Serve pasta topped with the remaining Parmigiano-Reggiano cheese.</li>
+        </ol>
+    </div>
+    
 </body>
 </html>
