--- a/recipes/indian-chicken-curry.html
+++ b/recipes/indian-chicken-curry.html
@@ -7,41 +7,59 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <a id="link-homepage" href="../index.html">Back to Homepage</a>
+    <div class="main-title main-title-bg" style="border-bottom:5px double black">
+        <h1 class="main-title-bg">Odin Recipes</h1>
+    </div>
+    <div id="link-homepage">
+        <a href="../index.html">Back to Homepage</a>
+    </div>
 
-    <h1 class="main-title">Indian Chicken Curry</h1>
+    <h2 class="recipe-title">Indian Chicken Curry</h2>
     <div class="image"><img src="../images/indian-chicken-curry.jpg" alt="Indian Chicken Curry" width="480"></div>
 
-    <h2 class="title">Description</h2>
-    <p>This Indian-inspired creamy chicken curry recipe is similar to a curry I had in India. The aromatic spices and flavors are a delight to the senses! Delicious with fresh naan and basmati rice.</p>
+    <div class="sub-title">
+        <h2>Description</h2>
+    </div>
+    <div class="description-content">
+        <p>This Indian-inspired creamy chicken curry recipe is similar to a curry I had in India. The aromatic spices and flavors are a delight to the senses! Delicious with fresh naan and basmati rice.</p>
+    </div>
 
-    <h2 class="title">Ingredients</h2>
-    <ul>
-        <li>3 tablespoons olive oil</li>
-        <li>1 small onion, chopped</li>
-        <li>2 cloves garlic, minced</li>
-        <li>3 tablespoons curry powder</li>
-        <li>1 teaspoon ground cinnamon</li>
-        <li>1 teaspoon paprika</li>
-        <li>1 bay leaf</li>
-        <li>½ teaspoon grated fresh ginger root</li>
-        <li>½ teaspoon white sugar</li>
-        <li>salt to taste</li>
-        <li>2 skinless, boneless chicken breast halves - cut into bite-size pieces</li>
-        <li>1 tablespoon tomato paste</li>
-        <li>1 cup plain yogurt</li>
-        <li>¾ cup coconut milk</li>
-        <li>½ lemon, juiced</li>
-        <li>½ teaspoon cayenne pepper</li>
-    </ul>
-
-    <h2 class="title">Steps</h2>
-    <ol>
-        <li>Heat olive oil in a skillet over medium heat. Sauté onion until lightly browned.</li>
-        <li>Stir in garlic, curry powder, cinnamon, paprika, bay leaf, ginger, sugar, and salt. Continue stirring for 2 minutes.</li>
-        <li>Add chicken pieces, tomato paste, yogurt, and coconut milk. Bring to a boil, reduce heat, and simmer for 20 to 25 minutes.</li>
-        <li>Remove bay leaf, and stir in lemon juice and cayenne pepper. Simmer 5 more minutes.</li>
-        <li>Serve hot and enjoy!</li>
-    </ol>
+    <div class="sub-title">
+        <h2>Ingredients</h2>
+    </div>
+    <div class="ingredients-content">
+        <ul>
+            <li>3 tablespoons olive oil</li>
+            <li>1 small onion, chopped</li>
+            <li>2 cloves garlic, minced</li>
+            <li>3 tablespoons curry powder</li>
+            <li>1 teaspoon ground cinnamon</li>
+            <li>1 teaspoon paprika</li>
+            <li>1 bay leaf</li>
+            <li>½ teaspoon grated fresh ginger root</li>
+            <li>½ teaspoon white sugar</li>
+            <li>salt to taste</li>
+            <li>2 skinless, boneless chicken breast halves - cut into bite-size pieces</li>
+            <li>1 tablespoon tomato paste</li>
+            <li>1 cup plain yogurt</li>
+            <li>¾ cup coconut milk</li>
+            <li>½ lemon, juiced</li>
+            <li>½ teaspoon cayenne pepper</li>
+        </ul>
+    </div>
+    
+    <div class="sub-title">
+        <h2>Steps</h2>
+    </div>
+    <div class="steps-content">
+        <ol>
+            <li>Heat olive oil in a skillet over medium heat. Sauté onion until lightly browned.</li>
+            <li>Stir in garlic, curry powder, cinnamon, paprika, bay leaf, ginger, sugar, and salt. Continue stirring for 2 minutes.</li>
+            <li>Add chicken pieces, tomato paste, yogurt, and coconut milk. Bring to a boil, reduce heat, and simmer for 20 to 25 minutes.</li>
+            <li>Remove bay leaf, and stir in lemon juice and cayenne pepper. Simmer 5 more minutes.</li>
+            <li>Serve hot and enjoy!</li>
+        </ol>
+    </div>
+    
 </body>
 </html>
